Have a guest view's embedder handle control wheel zoom changes

Currently, a guest view responds to control wheel zoom changes by
zooming the embedder. However, the embedder itself may not respond
to control wheel zoom changes. So a user could zoom an otherwise
non-zoomable embedder by control wheel zooming inside a guest.

We now have the guest view inform the embedder that a control wheel
zoom change has occurred so that the embedder can decide how to handle
it.

Bug: 874189
Change-Id: Icd49a2590e502bb60b7e3d6d372de3a133e2277f
Reviewed-on: https://chromium-review.googlesource.com/1175006
Reviewed-by: James MacLean <wjmaclean@chromium.org>
Commit-Queue: Kevin McNee <mcnee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583031}
Former-commit-id: 031f9b9b9e2f91fa6798d9766ce0078b423a97a7